# smartcampus_nodes

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md
.claude/: settings.local.json
lib/sensors/: dht11.c  dht11.h  ir_ac_commands.h  ir_nec.c  ir_nec.h  ir_raw.c  ir_raw.h  relay.c  relay.h  spi_diagnostic.c  spi_diagnostic.h  vl53l0x.c  vl53l0x.h
no1_temp/: CMakeLists.txt
no1_temp/src/: lorawan_task.c  main.c
no2_relay/: CMakeLists.txt
no2_relay/src/: lorawan_task.c  lorawan_task.h  main.c
no3_occup/: CMakeLists.txt
no3_occup/src/: lorawan_task.c  lorawan_task.h  main.c
tests/: CMakeLists.txt
tests/test_dht11/: main.c
tests/test_ir/: main.c
tests/test_radio/: main.c
tests/test_relay/: main.c
tests/test_stack/: main.c
tests/test_vl53l0x/: main.c
